--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
+  image_picker: ^0.8.5+3
   pull_to_refresh: ^2.0.0
-
 
 dev_dependencies:
   flutter_lints: ^2.0.0
