--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^6.0.0
   http: ^0.13.5
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.6
   provider: ^6.0.3
   pull_to_refresh: ^2.0.0
+  socket_io_client: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
