--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_phone_direct_caller: ^2.1.1
   flutter_secure_storage: ^6.0.0
+  flutter_svg: ^1.1.5
   http: ^0.13.5
   image_picker: ^0.8.6
   provider: ^6.0.3
   pull_to_refresh: ^2.0.0
+  shared_preferences: ^2.0.15
   socket_io_client: ^2.0.0
-
+  
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
@@ -65,10 +68,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: marker
+      fonts:
+        - asset: fonts/Quicksand-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
