--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,16 @@ dependencies:
   socket_io_client: ^2.0.0
   
 dev_dependencies:
+  flutter_launcher_icons: ^0.10.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo_back.png"
+  adaptive_icon_background: "assets/logo_back.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
